# mq-math

./: CMakeLists.txt  README.md  start.sh
impl/: mat2.cpp  mat3.cpp  mat4.cpp
public/: allow_nonstd_ext.h  mat.h  mq.h  vec2.h  vec3.h  vec4.h
test/: CMakeLists.txt
